interest-mvc+changes-events

--- a/app/views/events/_edit_event.html.erb
+++ b/app/views/events/_edit_event.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for @event do |f| %>
   <!-- Your form fields go here -->
   <%= f.text_field :club_id %>
   <%= f.text_field :event_name %>
