--- a/app/assets/stylesheets/_navbar.css
+++ b/app/assets/stylesheets/_navbar.css
@@ -88,3 +88,10 @@ nav .container {
 .hide {
   display: none;
 }
+
+.nav-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
