--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
-@import "./config/colors.scss";
-@import "./config/fonts.scss";
-@import "./pages/index.scss";
-@import "./components/navbar.scss";
+@import "./config/colors";
+@import "./config/fonts";
+@import "./pages/index";
+@import "./components/navbar";
+@import 'components/navbar';
