--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -77,35 +77,7 @@
   }
 
 
-  .dropdown-menu{
-    ul{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        list-style: none;
-        border: solid 3px $primary;
-        border-radius: 10px;
-        background-color: whi;
-        width: fit-content;
-        padding: 20px   ;
-        right: 10px;
-        top: 60px;
-        position: absolute;
-        li{
-            margin: 5px 0;
-            a{
-                text-decoration: none;
-                color: $primary;
-                font-size: 20px;
-                font-weight: bold;
-                &:hover{
-                    color: $light-yellow;
-                }
-            }
-        }
-    }
-}
+
 
   .dropdown-menu.show {
     display: block;
@@ -126,3 +98,5 @@
   .nav-icon-item {
     color:#000;
   }
+
+  // replace #f00 with your primary color
