--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -16,7 +16,7 @@
             </div>
             <div class="card-info">
               <div class="card-title">
-                <a href="club/<%=club.id%>">
+                <a href="clubs/<%=club.id%>">
                   <h3><%=club.name%></h3>
                 </a>
               </div>
