--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -16,11 +16,13 @@
 
 .modal-container {
   max-height: 90vh;
-  max-width: 500px;
+  width: 500px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #fff;
+  background-color: $light;
+  border: solid 3px $primary;
   border-radius: 16px;
+
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -53,60 +55,8 @@
 }
 
 .modal-container-body {
-  padding: 24px 32px 51px;
+  padding: 20px;
   overflow-y: auto;
-}
-
-.rtf {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: 700;
-  }
-
-  h1 {
-    font-size: 1.5rem;
-    line-height: 1.125;
-  }
-
-  h2 {
-    font-size: 1.25rem;
-    line-height: 1.25;
-  }
-
-  h3 {
-    font-size: 1rem;
-    line-height: 1.5;
-  }
-
-  & > * + * {
-    margin-top: 1em;
-  }
-
-  & > * + :is(h1, h2, h3) {
-    margin-top: 2em;
-  }
-
-  & > :is(h1, h2, h3) + * {
-    margin-top: 0.75em;
-  }
-
-  ul,
-  ol {
-    margin-left: 20px;
-    list-style-position: inside;
-  }
-
-  ol {
-    list-style: numeric;
-  }
-
-  ul {
-    list-style: disc;
-  }
 }
 
 .modal-container-footer {
@@ -117,44 +67,6 @@
   border-top: 1px solid #ddd;
   gap: 12px;
   position: relative;
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -51px;
-    left: 24px;
-    right: 24px;
-    height: 50px;
-    flex-shrink: 0;
-    background-image: linear-gradient(to top, rgba(#fff, 0.75), transparent);
-    pointer-events: none;
-  }
-}
-
-.button {
-  padding: 12px 20px;
-  border-radius: 8px;
-  background-color: transparent;
-  border: 0;
-  font-weight: 600;
-  cursor: pointer;
-  transition: 0.15s ease;
-
-  &.is-ghost {
-    &:hover,
-    &:focus {
-      background-color: #dfdad7;
-    }
-  }
-
-  &.is-primary {
-    background-color: #750550;
-    color: #fff;
-    &:hover,
-    &:focus {
-      background-color: #4a0433;
-    }
-  }
 }
 
 .icon-button {
@@ -179,4 +91,13 @@
   &:focus {
     background-color: #dfdad7;
   }
+}
+
+.text-area {
+  width: 100%;
+  height: 100px;
+  border: solid 3px $primary;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
 }
