--- a/app/assets/stylesheets/pages/club.scss
+++ b/app/assets/stylesheets/pages/club.scss
@@ -177,6 +177,7 @@
       justify-content: space-between;
       align-items: start;
       box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+      margin-bottom: 20px;
 
       .author {
         display: flex;
@@ -225,4 +226,13 @@
       }
     }
   }
+}
+
+input[type="file"]::file-selector-button {
+  background: none;
+  border: dashed 3px $primary;
+  border-radius: 10px;
+  padding: 5px 20px;
+  font-size: 13px;
+  color: $primary;
 }
