--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -1,11 +1,11 @@
-<div class="clubs-container">
+<div class="clubs-container" data-controller="club">
   <div class="clubs-header">
     <h1>Clubs</h1>
   </div>
   <div class="clubs-body">
     <div class="clubs">
       <% @clubs.each do |club|%>
-        <div class="club-card">
+        <div class="club-card" data-club-target="clubCard">
           <div class="card-header">
             <i class="fa-solid fa-ellipsis"></i>
             <i class="fa-solid fa-heart"></i>
@@ -27,12 +27,16 @@
               </div>
             </div>
             <div class="card-buttons">
-              <a href="" class="button main">Join</a>
+              <%if current_user.clubs.exists?(club.id)%>
+                <a href="clubs/<%=club.id%>" class="button main">View</a>
+              <%else%>
+                <a href="" class="button main" data-club-target="joinButton" data-club-id="<%=club.id%>" data-action="click->club#joinClub">Join</a>
+              <%end%>
               <a href="" class="button secondary">Message</a>
             </div>
             <div class="card-footer">
-              <div class="members">10/20</div>
-              <div class="members">12, december, 2024</div>
+              <div class="members">10/<%= club.members.count%></div>
+              <div class="members"><%= club.created_at.to_fs(:short)%></div>
             </div>
           </div>
         </div>
