--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,15 @@
   margin-right: 0.5rem;
   overflow: hidden;
   border: solid 3px $primary;
+  box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-out;
+  cursor: pointer;
+
+  &:hover {
+    transform: translate(-1px, -1px);
+    box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0.2), 1px 1px 0 0 $primary,
+      2px 2px 0 0 $primary;
+  }
 
   img {
     width: 100%;
@@ -87,8 +96,26 @@ nav a {
   }
 }
 
+.dropdown {
+  position: relative;
+}
+
 .dropdown-menu {
-  /* other styles for the dropdown menu */
+  position: absolute;
+  top: 110%;
+  right: 0;
+  background-color: white;
+  border: solid 3px $primary;
+  border-radius: 10px;
+  padding: 10px;
+  z-index: 1;
+  box-shadow: 0 7px 7px rgba(0, 0, 0, 0.3);
+  width: 100px;
+  text-align: center;
+  a {
+    display: block;
+    margin: 5px 0;
+  }
 }
 
 .dropdown-menu.show {
