--- a/app/assets/stylesheets/pages/club.scss
+++ b/app/assets/stylesheets/pages/club.scss
@@ -228,11 +228,24 @@
   }
 }
 
-input[type="file"]::file-selector-button {
-  background: none;
-  border: dashed 3px $primary;
-  border-radius: 10px;
-  padding: 5px 20px;
-  font-size: 13px;
+.private {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: $light;
   color: $primary;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
+    4px 4px 0 0 $primary;
+  border-radius: 10px;
+  margin-top: 20px;
+
+  i {
+    font-size: 100px;
+  }
 }
