--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,10 +13,15 @@
         Connect, Share, and Bond over Your Interests!
       </p>
     </div>
-    <div class="buttons">
-      <a href="/users/sign_in" class="button signin">Sign In</a>
-
-      <a href="/users/sign_up" class="button signup">Sign Up</a>
-    </div>
+    <%if user_signed_in?%>
+      <div class="buttons">
+        <a href="/clubs" class="button main">Explore</a>
+      </div>
+    <%else%>
+      <div class="buttons">
+        <a href="/users/sign_in" class="button signin">Sign In</a>
+        <a href="/users/sign_up" class="button signup">Sign Up</a>
+      </div>
+    <%end%>
   </div>
 </div>
