--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-  <nav>
+  <nav data-controller="navbar">
   <ul>
     <li>
       <div class="logo">
@@ -13,7 +13,6 @@
           <a href="/">Home</a>
           <a href="/clubs">Clubs</a>
           <a href="">Recommendations</a>
-          <a href="">My clubs</a>
         </div>
       </li>
       <li>
@@ -30,19 +29,15 @@
       </li>
       <li>
         <div class="dropdown">
-          <div class="avatar">
-            <%= image_tag("firepunch.jpeg")%>
+          <div class="avatar" data-action="click->navbar#toggleMenu">
+            <%= image_tag current_user.avatar_thumbnail %>
           </div>
-          <div id="drop" class="dropdown-menu hide" aria-labelledby="dropdownMenuButton">
+          <div id="drop" class="dropdown-menu hide" aria-labelledby="dropdownMenuButton" data-navbar-target="menu">
             <a class="dropdown-item" href="#">Profile</a>
-            <a class="dropdown-item" href="#">Dashboard</a>
-            <a class="dropdown-item" href="#">Settings</a>
-            <a class="dropdown-item" href="#">Logout</a>
+            <a href="">My clubs</a>
+            <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
           </div>
         </div>
-      </li>
-      <li class="logout">
-        <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item text-primary" %>
       </li>
     <%else%>
       <li>
