--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="home-container">
   <div class="main">
     <div class="banner">
+      <%= image_tag("2gather_logo")%>
     </div>
     <div class="header">
       <h1>
