fixed images cloudinary links

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -1,5 +1,5 @@
 .home-container {
-  background-image: url("background_doodles.png");
+  background-image: url("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707159577/vecteezy_sketch-in-doodle-style-group-of-funny-people-vector_17647157_Converted_g68f24.png");
   background-color: $light-yellow;
   background-blend-mode: screen;
   background-repeat: no-repeat;
