--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <li>
       <div class="logo">
         <a href="/">
-          <%=image_tag("2gather_logo.png") %>
+          <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/c_thumb,w_200,g_face/v1707159631/2gather_logo_ruyjpc.png") %>
         </a>
       </div>
     </li>
