--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,5 +35,5 @@
       </div>
     <% end %>
   </div>
-  <div class="side-panel"><%= image_tag("login_picture")%></div>
+  <div class="side-panel"><%= image_tag(".com/dgpk6t1we/image/upload/v1707159644/login_picture.png")%></div>
 </div>
