--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "clubs/index";
 @import "./components/checkbox";
 @import "./components/modal";
-
+@import "./pages/edit";
 * {
   margin: 0;
   padding: 0;
