--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <%= render 'shared/navbar' %>
+    <%= render "shared/navbar" %>
     <!--
     <%= render "shared/flashes" %>
     <p class="notice"><%= notice %></p>
