--- a/app/assets/stylesheets/pages/club.scss
+++ b/app/assets/stylesheets/pages/club.scss
@@ -179,10 +179,44 @@
       box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
       margin-bottom: 20px;
 
+      .post-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 20px;
+        position: relative;
+      }
+
+      .trigger {
+        cursor: pointer;
+        color: $primary;
+      }
+
+      .menu {
+        position: absolute;
+        top: 70%;
+        right: 0;
+        background-color: white;
+        border-radius: 10px;
+        padding: 10px;
+        z-index: 1;
+        box-shadow: 0 7px 7px rgba(0, 0, 0, 0.3);
+        width: 100px;
+        text-align: center;
+        a {
+          display: block;
+          margin: 5px 0;
+        }
+      }
+
+      .hide {
+        display: none;
+      }
+
       .author {
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
 
         .name {
           font-size: 15px;
