--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <li>
       <div class="logo">
         <a href="/">
-          <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/c_thumb,w_200,g_face/v1707159631/2gather_logo_ruyjpc.png") %>
+          <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707159631/assets/2gather_logo_ruyjpc.png") %>
         </a>
       </div>
     </li>
@@ -29,8 +29,12 @@
       </li>
       <li>
         <div class="dropdown">
-          <div class="avatar" data-action="click->navbar#toggleMenu">
-            <%= image_tag current_user.avatar_thumbnail %>
+          <div class="avatar" data-action="click->navbar#toggleMenu" data-navbar-target="avatar">
+            <%if current_user.avatar.attached?%>
+              <%=cl_image_tag(current_user.avatar.key)%>
+            <%else%>
+              <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707165672/assets/27470339_7294787_bxgffu.jpg")%>
+            <%end%>
           </div>
           <div id="drop" class="dropdown-menu hide" aria-labelledby="dropdownMenuButton" data-navbar-target="menu">
             <a class="dropdown-item" href="#">Profile</a>
