--- a/app/assets/stylesheets/clubs/index.scss
+++ b/app/assets/stylesheets/clubs/index.scss
@@ -31,6 +31,12 @@
     margin-right: 20px;
   }
 
+  @media screen and (max-width: 768px) {
+    .clubs {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
   .club-card {
     width: 100%;
     height: 330px;
