--- a/app/assets/stylesheets/pages/club.scss
+++ b/app/assets/stylesheets/pages/club.scss
@@ -19,6 +19,19 @@
     box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
     position: sticky;
     top: 20px;
+    overflow-y: auto;
+    .sidebar-header {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+      h1 {
+        font-size: 30px;
+        font-weight: 700;
+        color: $primary;
+      }
+    }
     .event {
       width: 100%;
       padding: 15px;
@@ -281,5 +294,50 @@
 
   i {
     font-size: 100px;
+  }
+}
+
+.date-btn {
+  background-color: $light;
+  border: solid 3px $primary;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: $primary;
+  font-weight: 500;
+  i {
+    font-size: 30px;
+  }
+}
+
+.input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+  input {
+    width: 80%;
+    padding: 10px;
+    border: solid 3px $primary;
+    border-radius: 10px;
+    background-color: $light;
+    color: $primary;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  textarea {
+    width: 80%;
+    padding: 10px;
+    border: solid 3px $primary;
+    border-radius: 10px;
+    background-color: $light;
+    color: $primary;
+    font-size: 20px;
+    font-weight: 500;
   }
 }
