--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,5 +1,5 @@
 .modal {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -8,6 +8,19 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(#000, 0.25);
+  .input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+    input[type="text"] {
+      @extend %input;
+    }
+    textarea {
+      @extend %textarea;
+    }
+  }
 }
 
 .hide {
@@ -91,13 +104,4 @@
   &:focus {
     background-color: #dfdad7;
   }
-}
-
-.text-area {
-  width: 100%;
-  height: 100px;
-  border: solid 3px $primary;
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 20px;
 }
