--- a/app/assets/stylesheets/pages/profile.scss
+++ b/app/assets/stylesheets/pages/profile.scss
@@ -1,22 +1,24 @@
-container {
+.profile-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  background-color: whitesmoke;
-  padding: 0 50px;
-}
-
-.banner {
-  width: 100%;
-  height: 40%;
-  padding: auto;
-  overflow: hidden;
+  height: fit-content;
+  padding: 20px 50px;
+  .banner {
+    width: 100%;
+    height: 40vh;
+    padding: auto;
+    overflow: hidden;
+    margin-bottom: 20px;
+    border: 3px solid $primary;
+    border-radius: 10px;
+  }
 }
 
 .profile-info {
   display: grid;
   grid-template-columns: 2fr 3fr;
   height: 100%;
+  gap: 20px;
 
   .stats {
     display: flex;
@@ -57,14 +59,15 @@ container {
 }
 
 .left {
-  border: 1px solid black;
+  border: 3px solid $primary;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
   padding: 10px;
-  margin: 10px;
   position: relative;
+  background-color: $light;
   .info-section {
     display: flex;
     flex-direction: column;
@@ -96,13 +99,14 @@ container {
 }
 
 .right {
-  border: 1px solid black;
+  border: 3px solid $primary;
+  border-radius: 10px;
+  background-color: $light;
   display: flex;
   flex-direction: row;
   align-items: baseline;
   justify-content: center;
   height: 100%;
-  margin: 10px;
   padding: 10px;
 
   .tabs {
@@ -111,11 +115,14 @@ container {
     width: 100%;
     justify-content: space-around;
     font-family: sans-serif;
+    transition: 0.1s all ease-in-out;
   }
 
   .tabs__label {
     padding: 10px 16px;
     cursor: pointer;
+    color: $primary;
+    transition: 0.1s all ease-in-out;
   }
 
   .tabs__radio {
@@ -129,12 +136,13 @@ container {
     line-height: 1.5;
     font-size: 0.9em;
     display: none;
+    transition: 0.3s all ease-in-out;
   }
 
   .tabs__radio:checked + .tabs__label {
     font-weight: bold;
-    color: #009578;
-    border-bottom: 2px solid #009578;
+    color: $orange;
+    border-bottom: 2px solid $orange;
   }
 
   .tabs__radio:checked + .tabs__label + .tabs__content {
