--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,7 +23,7 @@
 nav {
   width: 100%;
   height: 40px;
-  background-color: #f77f00;
+  background-color: $orange;
   padding: 1.8rem 3rem;
   top: 0;
   border-bottom: solid 3px $primary;
