--- a/app/assets/stylesheets/pages/profile.scss
+++ b/app/assets/stylesheets/pages/profile.scss
@@ -12,6 +12,21 @@
     border: 3px solid $primary;
     border-radius: 10px;
   }
+
+  .photos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    padding: 10px;
+    .photo {
+      border-radius: 10px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
 
 .profile-info {
@@ -59,15 +74,17 @@
 }
 
 .left {
-  border: 3px solid $primary;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-  padding: 10px;
-  position: relative;
+  height: fit-content;
+  padding: 20px;
+  position: sticky;
+  top: 100px;
   background-color: $light;
+  box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
+    4px 4px 0 0 $primary;
   .info-section {
     display: flex;
     flex-direction: column;
@@ -99,7 +116,6 @@
 }
 
 .right {
-  border: 3px solid $primary;
   border-radius: 10px;
   background-color: $light;
   display: flex;
@@ -108,6 +124,8 @@
   justify-content: center;
   height: 100%;
   padding: 10px;
+  box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
+    4px 4px 0 0 $primary;
 
   .tabs {
     display: flex;
@@ -132,7 +150,6 @@
   .tabs__content {
     order: 1;
     width: 100%;
-    border-bottom: 3px solid black;
     line-height: 1.5;
     font-size: 0.9em;
     display: none;
