--- a/app/views/events/_edit_event.html.erb
+++ b/app/views/events/_edit_event.html.erb
@@ -4,7 +4,7 @@
   <%= f.text_field :event_name %>
   <%= f.text_field :description%>
   <%= f.text_field :location%>
-  <%= f.text_field :start_date%>
-  <%= f.text_field :end_date%>
+  <%= f.text_field :start_time%>
+  <%= f.text_field :end_time%>
   <%= f.submit 'Update Event' %>
 <% end %>
