--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -92,12 +92,80 @@
     }
   }
 
-  .comments {
+  .comments-container {
     @extend %test;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
     a {
       font-weight: 600;
       text-decoration: none;
       color: $primary;
+    }
+    .comments {
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      width: 100%;
+      flex-direction: column;
+      max-height: 300px;
+      overflow-y: auto;
+      .comment {
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        .comment-content {
+          display: flex;
+          align-items: start;
+          justify-content: center;
+          flex-direction: column;
+          width: 80%;
+          font-size: 15px;
+          background-color: $light-gray;
+          border-radius: 10px;
+          padding: 10px;
+          .comment-author {
+            font-weight: 600;
+            color: $primary;
+          }
+        }
+        .avatar {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          overflow: hidden;
+          margin-right: 10px;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+  }
+
+  .comment-input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: $light-gray;
+    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+    margin-bottom: 20px;
+    input {
+      @extend %input;
+      width: 80%;
+    }
+    button {
+      width: fit-content;
+      margin-left: 5px;
     }
   }
 }
